fi: fix theme flicker in page change

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -167,3 +167,16 @@
     text-rendering: optimizeLegibility;
   }
 }
+
+/*
+  ---break---
+*/
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
